# agh

./: .gitignore  1.ipynb
asd/algos/: graph.py  sorting.py
asd/data_structures/: interval_tree.py  segment_tree.py
asd/ex_01/: bubblesort.py  zad1_1.py  zad2.py
asd/ex_02/: merge_sort.py
asd/ex_03/: quicksort.py  zad2.py  zad4.py
asd/ex_04/: zad1.py  zad3.py  zad4.py
asd/ex_05/: zad1.py  zad3.py
asd/ex_07/: zad2.py
asd/ex_08/: zad1.py  zad2.py
asd/ex_09/: zad1.py  zad2.py  zad3.py  zad4.py
asd/kol1/: kol1.py
bit-ai/: 01.ipynb  01_zad.ipynb  02.ipynb  1.ipynb
imperative-programming/: factorial.c  perfect.c  readme.md
imperative-programming/lab_00/: 01.c  02.c  03.c  04.c  06.c
imperative-programming/lab_01/: 01.c
imperative-programming/lab_02/: 01.c  02.c  03.c  test.c
imperative-programming/lab_03/: 01.c
imperative-programming/lab_04/: 01.c  test.c  test.txt
imperative-programming/lab_05/: 01.c
imperative-programming/lab_06/: 01.c
imperative-programming/lab_08/: 01.c  Makefile
imperative-programming/lab_10/: 01.c
unix/: 01.ipynb  02.ipynb  03.ipynb  04.ipynb  test1.ipynb
wdi/: 1.ipynb  2.ipynb  3.ipynb  4.ipynb  5.ipynb  6.ipynb  bit-rekurencja.ipynb  kol1.ipynb
year1/wdi/: 4.ipynb  (+1 more)
year_4/image_processing/: pyproject.toml
year_4/image_processing/lab01/: main.py
year_4/image_processing/lab02/: process.py
year_4/image_processing/lab03/: template.py
year_4/image_processing/lab04/: main.py
year_4/image_processing/lab05/: main.py
year_4/image_processing/lab06/: main.ipynb
year_4/image_processing/lab07/: main.ipynb
(+215 files in other folders)
